Fixed blank space issues on small mobile screens

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -68,7 +68,7 @@
     display: block;
   }
   .about-body p{
-    font-size: 16px;
+    font-size: 14px;
     line-height: 5vw;
   }
 }
