--- a/src/components/Schedule/Schedule.css
+++ b/src/components/Schedule/Schedule.css
@@ -113,4 +113,7 @@
     .eventTitle{
         flex-direction: column;
     }
+    .scheduleTitle{
+        font-size: 3em;
+    }
 }
